Fixed div wrapping errors on restaurant views

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,10 +15,6 @@ body {
   margin: 10px auto;
 }
 
-/*.pure-u-1-6 {
-  text-align: center;
-}*/
-
 .heading {
   font-weight: bold;
   font-size: 1.1em;
